src/main/java/lexical/test/failing/unclosedChar.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 3 | Caracter no cerrado: a |

'a